--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,6 +9,7 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='main.js'></script>
 </head>
+
 <body>
     <div id="menu_top">
         <ul>
@@ -24,18 +26,20 @@
         <div id="left">
             <ul>
                 <li>
-                    <img src="images/let&var.jpg">
-                    <h2>So sánh sự khác nhau giữa Let và Var</h2>
-                    Tại sao lại cần tới let và const dù trước đó đã có var để khai báo biến, thì ở bài viết này là lý do của từng kiểu khai báo biến.
+                    <a href="let-var.html"><img src="images/let&var.jpg"></a>
+                    <h2><a href="let-var.html">So sánh sự khác nhau giữa Let và Var</a></h2>
+                    Tại sao lại cần tới let và const dù trước đó đã có var để khai báo biến, thì ở bài viết này là lý do
+                    của từng kiểu khai báo biến.
                 </li>
                 <li>
-                    <img src="images/sss.jpg">
-                    <h2>So sánh sự khác nhau giữa slice - substring - substr</h2>
-                    Hàm substr() và substring(), slice() đều là hàm cắt chuỗi trong Javascript. Nhưng mỗi hàm lại có công dụng và hành vi riêng của nó.
+                    <a href="s-s-s.html"><img src="images/sss.jpg"></a>
+                    <h2><a href="s-s-s.html">So sánh sự khác nhau giữa slice - substring - substr</a></h2>
+                    Hàm substr() và substring(), slice() đều là hàm cắt chuỗi trong Javascript. Nhưng mỗi hàm lại có
+                    công dụng và hành vi riêng của nó.
                 </li>
                 <li>
-                    <img src="images/moment.jpg">
-                    <h2>Tìm hiểu về Moment JS</h2>
+                    <a href="moment.html"><img src="images/moment.jpg"></a>
+                    <h2><a href="moment.html">Tìm hiểu về Moment JS</a></h2>
                     Moment.js là một thư viện mạnh dùng để thao tác xử lý datetime trong javascript.
                     Moment.js được thiết kế hoạt động trong cả browser và Node.js
                 </li>
@@ -45,14 +49,15 @@
             <div class="menu_right">
                 <h3>Danh mục</h3>
                 <ul>
-                    <li><a href="#">So sánh sự khác nhau giữa Let và Var</a></li>
-                    <li><a href="#">So sánh sự khác nhau giữa slice - substring - substr</a></li>
-                    <li><a href="#">Tìm hiểu về Moment JS</a></li>
+                    <li><a href="let-var.html">So sánh sự khác nhau giữa Let và Var</a></li>
+                    <li><a href="s-s-s.html">So sánh sự khác nhau giữa slice - substring - substr</a></li>
+                    <li><a href="moment.html">Tìm hiểu về Moment JS</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div id="footer">Footer</div>
+    <div id="footer">Copyright © 2021 All Rights Reserved. Phát biển bởi Vũ Trung Kiên</div>
 
 </body>
+
 </html>
