--- a/let-var.html
+++ b/let-var.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,10 +9,11 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='main.js'></script>
 </head>
+
 <body>
     <div id="menu_top">
         <ul>
-            <li><a href="index.html" title="Trang chủ" >Trang chủ</a> </li>
+            <li><a href="index.html" title="Trang chủ">Trang chủ</a> </li>
             <li><a href="let-var.html" title="Let và Var" class="active">Let và Var</a></li>
             <li><a href="s-s-s.html" title="Slice - Substr - Substring">Slice - Substr - Substring</a></li>
             <li><a href="moment.html" title="Moment JS">Moment JS</a></li>
@@ -25,15 +27,25 @@
             <h3>Phân biệt kiểu biến var, let, và const trong JavaScript</h3>
             <h4>1. Giới thiệu</h4>
             <p>
-                ES6 (viết tắt của ECMAScript 6) là một tập hợp các kỹ thuật nâng cao của Javascript. ECMAScript do hiệp hội các nhà sản xuất máy tính Châu Âu đề xuất làm tiêu chuẩn của ngôn ngữ Javascript. Bạn cứ nghĩ xem hiện nay có khá nhiều trình duyệt Browser ra đời và nếu mỗi Browser lại có cách chạy Javascript khác nhau thì các trang web không thể hoạt động trên tất cả các trình duyệt đó được, vì vậy cần có một chuẩn chung để bắt buộc các browser phải phát triển dựa theo chuẩn đó.
+                ES6 (viết tắt của ECMAScript 6) là một tập hợp các kỹ thuật nâng cao của Javascript. ECMAScript do hiệp
+                hội các nhà sản xuất máy tính Châu Âu đề xuất làm tiêu chuẩn của ngôn ngữ Javascript. Bạn cứ nghĩ xem
+                hiện nay có khá nhiều trình duyệt Browser ra đời và nếu mỗi Browser lại có cách chạy Javascript khác
+                nhau thì các trang web không thể hoạt động trên tất cả các trình duyệt đó được, vì vậy cần có một chuẩn
+                chung để bắt buộc các browser phải phát triển dựa theo chuẩn đó.
             </p>
             <p>
-                Một trong những tính năng nổi bật của ES6 đó là sự bổ sung let và const phục vụ cho việc khai báo biến dữ liệu. Vậy tại sao lại cần tới let và const dù trước đó đã có var để khai báo biến, thì ở bài viết này chúng ta sẽ cùng tìm hiểu lý do của từng kiểu khai báo biến.
+                Một trong những tính năng nổi bật của ES6 đó là sự bổ sung let và const phục vụ cho việc khai báo biến
+                dữ liệu. Vậy tại sao lại cần tới let và const dù trước đó đã có var để khai báo biến, thì ở bài viết này
+                chúng ta sẽ cùng tìm hiểu lý do của từng kiểu khai báo biến.
             </p>
             <h4>2. Phân biệt</h4>
             <h5>2.1 Var</h5>
             <p>
-                Như đã biết trong Vanilla Javascript, với từ khóa var chúng ta có thể khai báo đa dạng các kiểu biến như number, string, boolean, etc. Trừ trường hợp được khai báo bên trong 1 function (khi đó biến var sẽ có scope là function/locally scoped), biến var sẽ có scope là globally scoped. Đặc biệt, biến var còn có thêm tính chất hoisting: nghĩa là dù khai báo ở đâu thì biến đều sẽ được đem lên đầu scope trước khi code được thực hiện.
+                Như đã biết trong Vanilla Javascript, với từ khóa var chúng ta có thể khai báo đa dạng các kiểu biến như
+                number, string, boolean, etc. Trừ trường hợp được khai báo bên trong 1 function (khi đó biến var sẽ có
+                scope là function/locally scoped), biến var sẽ có scope là globally scoped. Đặc biệt, biến var còn có
+                thêm tính chất hoisting: nghĩa là dù khai báo ở đâu thì biến đều sẽ được đem lên đầu scope trước khi
+                code được thực hiện.
             </p>
             <p>Lấy ví dụ</p>
             <pre><code>
@@ -57,9 +69,14 @@ var greeting = "say Hello instead";
             
                 console.log(greeting); //"say Hello instead"
             </code></pre>
-            <p>Vì thỏa điều kiện if nên greeting khi này sẽ có giá trị là "say Hello instead" và sẽ vẫn giữ nguyên giá trị này sau khi thoát ra khỏi block if. Điều này sẽ không có gây vấn đề gì nhưng nếu trong trường hợp code của chúng ta lên đến hàng trăm, hàng nghìn dòng code, hoặc chúng ta cũng không biết được giá trị của biến liệu có bị thay đổi ở đoạn code nào sẽ dẫn đến việc debug là vô cùng khó khăn. Để giải quyết vấn đề trên thì ES6 cung cấp cho chúng ta thêm 2 cách khác để khai báo biến bao gồm let và const.</p>
+            <p>Vì thỏa điều kiện if nên greeting khi này sẽ có giá trị là "say Hello instead" và sẽ vẫn giữ nguyên giá
+                trị này sau khi thoát ra khỏi block if. Điều này sẽ không có gây vấn đề gì nhưng nếu trong trường hợp
+                code của chúng ta lên đến hàng trăm, hàng nghìn dòng code, hoặc chúng ta cũng không biết được giá trị
+                của biến liệu có bị thay đổi ở đoạn code nào sẽ dẫn đến việc debug là vô cùng khó khăn. Để giải quyết
+                vấn đề trên thì ES6 cung cấp cho chúng ta thêm 2 cách khác để khai báo biến bao gồm let và const.</p>
             <h5>2.1 Let</h5>
-            <p>Một trong những nguyên nhân khiến let có thể thay thế var để xử lý vấn đề nêu trên là vì biến let được khai báo sẽ có scope là block scoped chứ không phải globally hay locally scoped.</p>
+            <p>Một trong những nguyên nhân khiến let có thể thay thế var để xử lý vấn đề nêu trên là vì biến let được
+                khai báo sẽ có scope là block scoped chứ không phải globally hay locally scoped.</p>
             <pre><code>
 let greeting = "say Hi";
 let times = 4;
@@ -70,9 +87,11 @@ if (times > 3) {
     }
                 console.log(hello); // hello is not defined
             </code></pre>
-            <p>Chúng ta có thế thấy là đối với biến có scope là block scoped nếu ra khỏi scope được khai báo thì sẽ không thể sử dụng được nữa.
+            <p>Chúng ta có thế thấy là đối với biến có scope là block scoped nếu ra khỏi scope được khai báo thì sẽ
+                không thể sử dụng được nữa.
 
-                let cho phép chúng ta cập nhật giá trị của biến chứ không cho phép chúng ta tái khái báo lại biến đó.</p>
+                let cho phép chúng ta cập nhật giá trị của biến chứ không cho phép chúng ta tái khái báo lại biến đó.
+            </p>
             <pre><code>
 let greeting = "say Hi";
 console.log(greeting); //"say Hi"
@@ -85,7 +104,8 @@ console.log(greeting); //"say Hello instead"
  let greeting = "say Hi";
 let greeting = "say Hello instead";
             </code></pre>
-            <p>Tuy nhiên, đối với các block khác nhau thì việc tái khai báo biến sẽ không sinh ra lỗi vì đối với từng scope, mỗi biến sẽ được xem xét là 1 biến riêng khác biệt.</p>
+            <p>Tuy nhiên, đối với các block khác nhau thì việc tái khai báo biến sẽ không sinh ra lỗi vì đối với từng
+                scope, mỗi biến sẽ được xem xét là 1 biến riêng khác biệt.</p>
             <pre><code>
 let greeting = "say Hi";
 if (true) {
@@ -94,20 +114,23 @@ if (true) {
 }
 console.log(greeting); // "say Hi"
             </code></pre>
-            <p>Giống với var, let cũng có tính hoisting tuy nhiên lại khác nhau ở chỗ thay vì var được khởi tạo với giá trị là undefined thì let sẽ không có bất kỳ giá trị khởi tạo nào. Điều này dẫn đến việc nếu chúng ta sử dụng biến let trước khi khai báo thì sẽ gặp lỗi Reference Error.</p>
+            <p>Giống với var, let cũng có tính hoisting tuy nhiên lại khác nhau ở chỗ thay vì var được khởi tạo với giá
+                trị là undefined thì let sẽ không có bất kỳ giá trị khởi tạo nào. Điều này dẫn đến việc nếu chúng ta sử
+                dụng biến let trước khi khai báo thì sẽ gặp lỗi Reference Error.</p>
         </div>
         <div id="right">
             <div class="menu_right">
                 <h3>Danh mục</h3>
                 <ul>
-                    <li><a href="#">So sánh sự khác nhau giữa Let và Var</a></li>
-                    <li><a href="#">So sánh sự khác nhau giữa slice - substring - substr</a></li>
-                    <li><a href="#">Tìm hiểu về Moment JS</a></li>
+                    <li><a href="let-var.html">So sánh sự khác nhau giữa Let và Var</a></li>
+                    <li><a href="s-s-s.html">So sánh sự khác nhau giữa slice - substring - substr</a></li>
+                    <li><a href="moment.html">Tìm hiểu về Moment JS</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div id="footer">Footer</div>
+    <div id="footer">Copyright © 2021 All Rights Reserved. Phát biển bởi Vũ Trung Kiên</div>
 
 </body>
+
 </html>
