--- a/s-s-s.html
+++ b/s-s-s.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
@@ -8,12 +9,14 @@
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='main.js'></script>
 </head>
+
 <body>
     <div id="menu_top">
         <ul>
-            <li><a href="index.html" title="Trang chủ" >Trang chủ</a> </li>
+            <li><a href="index.html" title="Trang chủ">Trang chủ</a> </li>
             <li><a href="let-var.html" title="Let và Var">Let và Var</a></li>
-            <li><a href="s-s-s.html" title="Slice - Substr - Substring" class="active">Slice - Substr - Substring</a></li>
+            <li><a href="s-s-s.html" title="Slice - Substr - Substring" class="active">Slice - Substr - Substring</a>
+            </li>
             <li><a href="moment.html" title="Moment JS">Moment JS</a></li>
         </ul>
     </div>
@@ -23,7 +26,9 @@
     <div id="main">
         <div id="left">
             <h3>Hàm substr() và substring(), slice() cắt chuỗi trong Javascript</h3>
-            <p>Hàm substr() và substring(), slice() đều là hàm cắt chuỗi trong Javascript. Nhưng mỗi hàm lại có công dụng và hành vi riêng của nó, những bạn mới tìm hiểu Javascript rễ hiểu lầm 2 hàm substr() và substring() giống nhau. Dưới đây là công dụng và cách sử dụng từng hàm.
+            <p>Hàm substr() và substring(), slice() đều là hàm cắt chuỗi trong Javascript. Nhưng mỗi hàm lại có công
+                dụng và hành vi riêng của nó, những bạn mới tìm hiểu Javascript rễ hiểu lầm 2 hàm substr() và
+                substring() giống nhau. Dưới đây là công dụng và cách sử dụng từng hàm.
             </p>
             <h4>1. Hàm substr()</h4>
             <pre><code>
@@ -86,7 +91,7 @@ Nếu bỏ qua stop (khuyết stop) sẽ lấy từ vị trí bắt đầu đế
             </code></pre>
             <h4>3. Hàm slice(): hoạt động như substring() nhưng có một số hành vi khác nhau.</h4>
             <pre><code>
-                Cấu trúc: string.slice(start[, stop]);
+Cấu trúc: string.slice(start[, stop]);
             </code></pre>
             <pre>
 - Nếu giá trị kết thúc (stop) được bỏ qua cũng như hàm substring() sẽ tính từ vị trí bắt đầu đến cuối chuỗi.
@@ -106,33 +111,20 @@ var str="abcdefghijklmnopq";
 document.write(str.slice(-10,-7)); Tính từ vị trí thứ 10 đếm ngược từ cuối chuỗi đến vị trí thứ 8 đếm ngược từ cuối chuỗi. 
 Kết quả: "hij"
             </code></pre>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
         </div>
         <div id="right">
             <div class="menu_right">
                 <h3>Danh mục</h3>
                 <ul>
-                    <li><a href="#">So sánh sự khác nhau giữa Let và Var</a></li>
-                    <li><a href="#">So sánh sự khác nhau giữa slice - substring - substr</a></li>
-                    <li><a href="#">Tìm hiểu về Moment JS</a></li>
+                    <li><a href="let-var.html">So sánh sự khác nhau giữa Let và Var</a></li>
+                    <li><a href="s-s-s.html">So sánh sự khác nhau giữa slice - substring - substr</a></li>
+                    <li><a href="moment.html">Tìm hiểu về Moment JS</a></li>
                 </ul>
             </div>
         </div>
     </div>
-    <div id="footer">Footer</div>
+    <div id="footer">Copyright © 2021 All Rights Reserved. Phát biển bởi Vũ Trung Kiên</div>
 
 </body>
+
 </html>
